@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pam_url-0.3.2 (17 Jun 2013)
+
+  17 Jun 2013; Daniel M. Weeks <dan@danweeks.net> +pam_url-0.3.2.ebuild:
+  Add sys-auth/pam_url-0.3.2 ebuild
+
 *pam_url-9999 (17 Jun 2013)
 
   17 Jun 2013; Daniel M. Weeks <dan@danweeks.net> +metadata.xml,
